k8s-hl.yaml
apiVersion: v1
kind: List
items:

- apiVersion: v1
  kind: Namespace
  metadata:
    name: gutmicrobes-hl-prod

- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: gutmicrobes-hl-ingress
    namespace: gutmicrobes-hl-prod
  spec:
    rules:
      - host: www.gut-microbes.org
        http:
          paths:
            - pathType: Prefix
              path: "/"
              backend:
                service:
                  name: gutmicrobes-hl-service
                  port:
                    number: 80

- apiVersion: v1
  kind: Service
  metadata:
    name: gutmicrobes-hl-service
    namespace: gutmicrobes-hl-prod
  spec:
    selector:
      app: gutmicrobes-hl
    ports:
      - port: 80
        targetPort: 80

- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: gutmicrobes-hl-deployment
    namespace: gutmicrobes-hl-prod
    labels:
      app: gutmicrobes-hl
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: gutmicrobes-hl
    template:
      metadata:
        labels:
          app: gutmicrobes-hl
      spec:
        volumes:
          - name: gut-microbes-static-storage
            persistentVolumeClaim:
              claimName: gut-microbes-static-volume-claim
        containers:
          - name: gutmicrobes-hl-container
            image: nginx:latest
            ports:
              - containerPort: 80
            volumeMounts:
              - name: gut-microbes-static-storage
                mountPath: "/usr/share/nginx/html"

- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: gut-microbes-static-volume-claim
    namespace: gutmicrobes-hl-prod
  spec:
    storageClassName: ""
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    volumeName: gut-microbes-static-volume

- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: gut-microbes-static-volume
    namespace: gutmicrobes-hl-prod
  spec:
    capacity:
      storage: 1Gi
    volumeMode: Filesystem
    accessModes:
      - ReadWriteOnce
    persistentVolumeReclaimPolicy: Retain
    mountOptions:
      - nfsvers=3
    nfs:
      server: hh-isi-srv-vlan1496.ebi.ac.uk
      path: /ifs/public/rw/metagenomics/gut_microbes/gut-microbes-org/staticsite
